# GUI

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  notepad.cpp  notepad.h  video.cpp
cache/: config.txt
cache/13_2_backup/: CMakeLists.txt  camera.cpp  camera.h  config.txt
cache/13_3_backup/: camera.cpp  camera.h  main.cpp
cache/19_2_backup/: camera.cpp  camera.h  config.txt  main.cpp
cache/27_2_backup/: camera.cpp  camera.h  config.txt
cache/camera2/: CMakeLists.txt  camera  config.txt  debug.cpp
cache/current/: camera.cpp  camera.h  config.txt  debug.cpp  main.cpp  masterbait.cpp  serialtest.cpp
cache/new/: camera.cpp  camera.h  config.txt  debug.cpp  main.cpp
